src/scss/pages/answer-question.scss
@import '../_partials/colors';

body #root .App .view .page {
  #page-content {
    .answer-question {
      margin-top: 70px;

      .answer-question-title {
        margin-bottom: 20px;
      }
      .answer-question-form {
        form {
          .list-block.answers, .list-block.accepted-answers {
            margin: auto;
            float: left;
            width: 82%;

            .answer-question-picture {
              margin-right: -10px;
              text-align: right;

              .answer-question-own-picture-container, .answer-question-other-picture-container {
                background-color: #fff;
                border-radius: 50%;
                display: inline-block;
                height: 42px;
                width: 42px;

                .answer-question-own-picture, .answer-question-other-picture {
                  border-radius: 50%;
                  height: 40px;
                  margin: 1px 0 0 1px;
                  width: 40px;

                  img {
                    border-radius: 50%;
                    height: 40px;
                    width: 40px;
                  }
                }
                .answer-question-other-picture {
                  text-align: center;

                  span {
                    color: $dark-blue;
                    line-height: 40px;
                  }
                }
              }
              .answer-question-other-picture-container {
                margin-left: 2%;
              }
            }
            ul {
              li {
                .label-checkbox {
                  .item-inner {
                    .item-title {
                      width: 90%;
                    }
                  }
                }
                &::after {
                  content: none;
                }
              }
              .active-state {
                background-color: transparent;
              }
            }
          }

          .list-block.accepted-answers {
            margin-left: 15%;
            position: absolute;
            width: 69.7%;

            ul {
              li {
                .label-checkbox {

                  .item-inner {
                    .item-title {
                      opacity: 0;
                    }
                  }
                  input {
                    z-index: 100;
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}

